--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "simple-datatables": "^3.2.0",
     "sweetalert2": "^11.3.0",
     "web-vitals": "^1.1.2"
   },
