--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.0.2",
     "bootstrap-icons": "^1.7.2",
     "boxicons": "^2.1.1",
+    "chart.js": "^3.7.0",
     "history": "^5.1.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-quill": "^1.3.5",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "simple-datatables": "^3.2.0",
     "sweetalert2": "^11.3.0",
