--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "boxicons": "^2.1.1",
     "chart.js": "^3.7.0",
     "history": "^5.1.0",
+    "luxon": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^4.0.0",
