--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_URL=http://localhost:3004/noticias
-REACT_APP_API_URL_CAT=http://localhost:3004/categorias
+REACT_APP_API_URL= https://rolling--news.herokuapp.com/apinoticias/
