--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL= https://rolling--news.herokuapp.com/apinoticias/
+REACT_APP_API_URL= https://rolling-news.onrender.com/apinoticias/
